Fixing cropper display, Fixed various things

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,10 @@ nav {
   display: flex;
   flex-direction: row;
   gap: 50px;
+
+  svg {
+    display: block;
+  }
 }
 
 .row {
